--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "webpack-parallel-uglify-plugin": "^1.1.2"
   },
   "dependencies": {
+    "animejs": "^3.1.0",
     "axios": "^0.19.1",
     "jquery": "^3.4.1",
+    "swiper": "^5.3.0",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   }
