--- a/package.json
+++ b/package.json
@@ -49,6 +49,17 @@
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.1.3",
+    "vue-waterfall-easy": "^2.4.4",
     "vuex": "^3.1.2"
-  }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
