--- a/package.json
+++ b/package.json
@@ -45,11 +45,14 @@
     "animejs": "^3.1.0",
     "axios": "^0.19.1",
     "jquery": "^3.4.1",
+    "js-cookie": "^2.2.1",
+    "qs": "^6.9.1",
     "swiper": "^5.3.0",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.3",
-    "vue-waterfall-easy": "^2.4.4",
+    "vue-stick": "^1.0.7",
     "vuex": "^3.1.2"
   },
   "postcss": {
